<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/backgroundmurder"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:gravity="center_horizontal"
    android:weightSum="1">

    <tictactoe.unal.edu.co.androidtic_tac_toe.BoardView
        android:id="@+id/board"
        android:layout_width="308dp"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.30" />
    <!-->
    <TableLayout
        android:id="@+id/play_grid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.31">

        <TableRow android:gravity="center_horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="1"
                android:textSize="70dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="2"
                android:textSize="70dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="3"
                android:textSize="70dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="4"
                android:textSize="70dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="5"
                android:textSize="70dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="6"
                android:textSize="70dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">
            <Button
                android:id="@+id/seven"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="7"
                android:textSize="70dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="8"
                android:textSize="70dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="9"
                android:textSize="70dp" />
        </TableRow>
    </TableLayout>
    <-->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/info"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/score_label_human"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player_score"
            android:textColor="#5d49ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/player_score_label"
            android:gravity="left"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tie_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/player_score"
            android:layout_below="@+id/information"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/score_label_tie"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tie_score"
            android:textColor="#5d49ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/tie_score_label"
            android:gravity="left"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/computer_score"
            android:textColor="#5d49ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/information"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/computer_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/computer_score"
            android:gravity="right"
            android:text="@string/score_label_computer"
            android:textSize="20sp" >
        </TextView>
    </RelativeLayout>

</LinearLayout>